add_executable(unix_domain_client unix_domain_client.c)
add_executable(unix_domain_server unix_domain_server.c)
add_executable(unix_domain_bench unix_domain_bench.c)

target_link_libraries(unix_domain_client common)
target_link_libraries(unix_domain_server common)
target_link_libraries(unix_domain_bench common)